Update sidebar nav
Updated to use the route's subpages.length to check if it should show instead of an arbitrary boolean

--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,12 @@
     margin-top: 30px;
   }
 }
+
+.resume-page .uk-card-header .uk-icon-button{
+    background-color: var(--greenish);
+    color: white;
+}
+.resume-page .uk-card-header .uk-icon-button:hover{
+    background-color: var(--blue-lt);
+    color: white;
+}
