change naming convention to better match margin fix

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
-.sidebar-nav{
+.sidebar-mt{
   margin-top: 20px;
 }
 @media (min-width: 1200px){
-  .sidebar-nav{
+  .sidebar-mt{
     margin-top: 30px;
   }
 }
